--- a/YoutubeBlog.Web/appsettings.json
+++ b/YoutubeBlog.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-QMOGCM6;Database=BlogDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BlogDb;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
