--- a/YoutubeBlog.Web/appsettings.json
+++ b/YoutubeBlog.Web/appsettings.json
@@ -1,7 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BlogDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=DESKTOP-QMOGCM6;Database=BlogDb;Trusted_Connection=True;"
   },
+
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BlogDb;Trusted_Connection=True;"
+  //},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
