--- a/YoutubeBlog.Web/YoutubeBlog.Web.csproj
+++ b/YoutubeBlog.Web/YoutubeBlog.Web.csproj
@@ -34,4 +34,8 @@
     <None Include="wwwroot\sneat\.github\workflows\issue-staler.yml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
